Added a bit of the PGSQL implementation.

--- a/win/VC80/shared.vcproj
+++ b/win/VC80/shared.vcproj
@@ -369,6 +369,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\shared\Database\DatabasePostgre.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\shared\Database\DatabasePostgre.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\shared\Database\DatabaseSqlite.cpp"
 				>
 			</File>
