--- a/win/VC90/shared.vcproj
+++ b/win/VC90/shared.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="shared"
 	ProjectGUID="{90297C34-F231-4DF4-848E-A74BCC0E40ED}"
 	RootNamespace="shared"
@@ -211,7 +211,7 @@
 				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\..\dep\include;..\..\dep\include\g3dlite;..\..\src\framework;..\..\src\shared;..\..\dep\ACE_wrappers"
-				PreprocessorDefinitions="WIN32;_DEBUG;MANGOS_DEBUG;_LIB;_CRT_SECURE_NO_DEPRECATE"
+				PreprocessorDefinitions="WIN32;_DEBUG;MANGOS_DEBUG;_LIB;_CRT_SECURE_NO_DEPRECATE;DO_POSTGRESQL"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				EnableFunctionLevelLinking="true"
@@ -373,6 +373,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\shared\Database\DatabasePostgre.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\shared\Database\DatabasePostgre.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\shared\Database\DatabaseSqlite.cpp"
 				>
 			</File>
@@ -390,6 +398,26 @@
 			</File>
 			<File
 				RelativePath="..\..\src\shared\Database\MySQLDelayThread.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\shared\Database\MySQLPreparedStatement.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\shared\Database\MySQLPreparedStatement.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\shared\Database\PGSQLPreparedStatement.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\shared\Database\PGSQLPreparedStatement.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\shared\Database\PreparedStatement.h"
 				>
 			</File>
 			<File
